# CarbonCast

./: .gitignore  CarbonCast_2024.md  README.md  docker-compose.yml  graphgen.py  installDependencies.sh  package-lock.json  package.json  requirements.txt  requirements_mac.txt  run.py  setup.py  simple_regression.ipynb
src/weather/grib2/libaec-1.0.2/: CHANGELOG.md  CMakeLists.txt  INSTALL  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac  libtool
src/weather/grib2/libaec-1.0.2/cmake/: config.h.in  macros.cmake
src/weather/grib2/libaec-1.0.2/config/: config.h  config.h.in
src/weather/grib2/libaec-1.0.2/data/: typical.rz
src/weather/grib2/libaec-1.0.2/data/121B2TestData/: README121BTest.docx
src/weather/grib2/libaec-1.0.2/doc/: patent.txt
src/weather/grib2/libaec-1.0.2/src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  aec.c  bdec.sh  benc.sh  decode.c  decode.h  decode.lo  encode.c  encode.h  encode.lo  encode_accessors.c  encode_accessors.h  encode_accessors.lo  libaec.la  libsz.la  sz_compat.c  sz_compat.lo  utime  utime.c
src/weather/grib2/libaec-1.0.2/src/.deps/: aec.Po  decode.Plo  encode.Plo  encode_accessors.Plo  (+2 more)
src/weather/grib2/libaec-1.0.2/tests/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  check_aec.c  check_aec.h  check_aec.lo  check_buffer_sizes  check_buffer_sizes.c  check_code_options  check_code_options.c  check_long_fs  check_long_fs.c  check_szcomp  libcheck_aec.la  sampledata.sh  szcomp.sh
src/weather/grib2/netcdf-3.6.3/: INSTALL  Makefile  Makefile.am  Makefile.in  RELEASE_NOTES  acinclude.m4  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  dods.m4  libtool  ncdap.m4
src/weather/grib2/netcdf-3.6.3/cxx/: Makefile  Makefile.am  Makefile.in
src/weather/grib2/netcdf-3.6.3/cxx4/: Makefile  Makefile.am  Makefile.in  ncatt.cpp  ncdim.cpp  ncexception.cpp  ncfile.cpp  ncgroup.cpp  ncvalues.cpp  ncvalues.h  ncvar.cpp  netcdfcpp4.h  tst_file.cpp  tst_filerw.cpp  tst_simple.cpp  tst_suite.cpp  tst_suite.h  tst_suiterunner.cpp
src/weather/grib2/netcdf-3.6.3/examples/: Makefile  Makefile.in
src/weather/grib2/netcdf-3.6.3/f90/: Makefile  Makefile.am  Makefile.in  netcdf4_constants.f90  netcdf4_externals.f90  netcdf4_func.f90  netcdf4_visibility.f90  netcdf_f90.3
src/weather/grib2/netcdf-3.6.3/fortran/: Makefile  Makefile.am  Makefile.in  fort-nc4.c  netcdf4.inc  netcdf_f77.3
src/weather/grib2/netcdf-3.6.3/libsrc/: Makefile  Makefile.am  Makefile.in  attr.lo  attr.m4  dim.lo  error.lo  libnetcdf.la  libvers.lo  nc.lo  ncx.lo  ncx.m4  netcdf.3  posixio.lo  putget.lo  putget.m4  string.lo  t_nc  utf8proc.lo  v1hpg.lo  var.lo
src/weather/grib2/netcdf-3.6.3/libsrc4/: Makefile  Makefile.am  Makefile.in  error.c  error.h  nc4attr.c  nc4dim.c  nc4file.c  nc4grp.c  nc4hdf.c  nc4internal.c  nc4internal.h  nc4type.c  nc4var.c  nc_tests.h  ncfunc.c  netcdf.h  ref_tst_h_compounds.h5  tst_atts.c  tst_compounds.c  tst_compounds2.c  tst_converts.c  tst_converts2.c  tst_dims.c  tst_enums.c  tst_files.c  tst_grps.c  tst_h_atts.c  tst_h_atts2.c  tst_h_compounds.c  tst_h_compounds2.c  tst_h_dimscales.c  tst_h_dimscales2.c  tst_h_enums.c  tst_h_files.c  tst_h_grps.c  tst_h_opaques.c  tst_h_par.c  tst_h_rd_cmp.c  tst_h_strings.c  (+15 more)
src/weather/grib2/netcdf-3.6.3/man/: Makefile  Makefile.am  Makefile.in  defines.texi  ncdump-man-1.html  ncgen-man-1.html  netcdf-c.texi  netcdf-c.txt  netcdf-cxx.info  netcdf-cxx.txt  netcdf-f77.texi  netcdf-f77.txt  netcdf-f90.texi  netcdf-f90.txt  netcdf-install.texi  netcdf-man-3.html  netcdf-tutorial.texi  netcdf-tutorial.txt  netcdf.texi  netcdf.txt  netcdf_f77-man.html  netcdf_f90-man.html  pres_temp_4D_wr.f90  sfc_pres_temp_wr.f90  simple_xy_rd.f90  stamp-1  stamp-6  stamp-vti  version-f90.texi  version-tutorial.texi
src/weather/grib2/netcdf-3.6.3/man4/: Makefile  Makefile.am  Makefile.in  defines.texi  ncdump-man-1.html  ncgen-man-1.html  netcdf-c.dvi  netcdf-c.html  netcdf-c.info  netcdf-c.info-1  netcdf-c.info-2  netcdf-c.ps  netcdf-c.texi  netcdf-c.txt  netcdf-cxx.dvi  netcdf-cxx.html  netcdf-cxx.info  netcdf-cxx.ps  netcdf-cxx.texi  netcdf-cxx.txt  netcdf-cxx4.dvi  netcdf-cxx4.html  netcdf-cxx4.info  netcdf-cxx4.ps  netcdf-cxx4.texi  netcdf-cxx4.txt  netcdf-f77.dvi  netcdf-f77.html  netcdf-f77.info  netcdf-f77.info-1  netcdf-f77.info-2  netcdf-f77.ps  netcdf-f77.texi  netcdf-f77.txt  netcdf-f90.dvi  netcdf-f90.html  netcdf-f90.info  netcdf-f90.ps  netcdf-f90.texi  netcdf-f90.txt  (+30 more)
src/weather/grib2/netcdf-3.6.3/nc_test/: Makefile  Makefile.am  Makefile.in  nc_test  nc_test.c  nc_test_64bit.nc  nc_test_classic.nc  tst_large.c  tst_misc  tst_misc.c  tst_names  tst_names.c  tst_norm  tst_norm.c  tst_norm.nc  tst_small  tst_small.c  tst_small_64bit.nc  tst_small_classic.nc
src/weather/grib2/netcdf-3.6.3/nc_test4/: Makefile  Makefile.am  Makefile.in  bm_file.c  cdm_sea_soundings.c  tst_large.c  tst_parallel.c  tst_parallel3.c
src/weather/grib2/netcdf-3.6.3/ncdump/: Makefile  Makefile.am  Makefile.in  dumplib.c  dumplib.h  indent.c  ncdump.1  ncdump.c  ncdump.h  ref_tst_comp.cdl  ref_tst_group_data.cdl  ref_tst_opaque_data.cdl  ref_tst_solar_1.cdl  ref_tst_string_data.cdl  rewrite-scalar.c  run_tests.sh  tst_comp.c  tst_create_files.c  tst_enum_data.c  tst_group_data.c  tst_lengths.sh  tst_nans.c  tst_netcdf4.sh  tst_netcdf4_4.sh  tst_opaque_data.c  tst_output.sh  tst_string_data.c  tst_unicode.c  tst_utf8.c  tst_vlen_data.c  vardata.c
src/weather/grib2/netcdf-3.6.3/ncgen/: Makefile  Makefile.am  Makefile.in  genlib.c  genlib.h  load.c  main.c  ncgen.1  ncgen.l  ncgentab.c  ncgenyy.c
src/weather/grib2/netcdf-3.6.3/nctest/: Makefile  Makefile.am  Makefile.in  cdftests.c  driver.c
src/weather/grib2/netcdf-3.6.3/nf_test/: Makefile  Makefile.am  Makefile.in  f90tst_vars.f90  ftest.F  ftst_groups.F  ftst_types.F  ftst_types2.F  ftst_vars.F  ftst_vars2.F  ftst_vars3.F  ftst_vars4.F  ftst_vars5.F  handle_err.f  nf_test.F  tst_flarge.f90  tst_io.f90  tst_types.f90  util.F
src/weather/grib2/netcdf-3.6.3/win32/: Makefile  Makefile.in
(+160841 files in other folders)
